# NoteBotInjector

./: .gitattributes  .gitignore  AGENTS.md  AUTH_V3_REWRITE_SPEC.md  AUTH_V3_SERVER_DETAILED_DESIGN.md  AUTH_V3_SERVER_IMPLEMENTATION_GUIDE.md  AUTH_V3_SERVER_REBUILD_PLAN.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  MODEL_MODIFICATION_DESIGN.md  README.md  build_all.bat  build_clean.bat  build_dll.bat
_admin_console_lab/admin-console/: index.html  mock-server.mjs  package-lock.json  package.json  vite.config.ts
_admin_console_lab/admin-console/src/: App.vue  style.css
docs/: model-runtime-authorization-rollout.md
docs/superpowers/plans/: 2026-07-11-vmp-protection-readiness.md  2026-07-12-inject-report-lifecycle.md
docs/superpowers/specs/: 2026-07-11-vmp-protection-readiness-design.md  2026-07-12-inject-report-lifecycle-design.md
qml__injector_exe/: main.qml
resources__injector_exe/: app.qrc  app_icon.rc
resources__injector_exe/shaders/: modelpreview.frag  modelpreview.frag.qsb  modelpreview.vert  modelpreview.vert.qsb
src__auth_dll/: CMakeLists.txt  version_info.rc
src__auth_dll/include/: notebot_auth.h
src__auth_dll/src/: api.cpp  name_injector.cpp  name_injector.h
src__auth_dll/src/crypto/: crypto_utils.cpp  crypto_utils.h  secure_string.h  vmp_defs.h
src__auth_dll/src/protected/: protected_download_ops.cpp  protected_download_ops.h  protected_name_ops.cpp  protected_name_ops.h  protected_ticket_ops.cpp  protected_ticket_ops.h  protected_v3_ops.cpp  protected_v3_ops.h  protected_verify_ops.cpp  protected_verify_ops.h
src__auth_dll/src/v3/: v3_actions.cpp  v3_actions.h  v3_rpc_client.cpp  v3_rpc_client.h  v3_server_pubkey.h  v3_state.cpp  v3_state.h
src__injector_exe/: backend.cpp  backend.h  logmodel.cpp  logmodel.h  main.cpp  modelcatalogmodel.cpp  modelcatalogmodel.h  modelpreviewitem.cpp  modelpreviewitem.h  processmodel.cpp  processmodel.h  updater.cpp  updater.h  vmp_defs.h  win32injector.cpp  win32injector.h  win32process.cpp  win32process.h
src__model_dll/include/: notebot_model.h
src__model_dll/src/: model_api.cpp
src__updater_exe/: updater_main.cpp  version_info.rc
tools__project_helpers/: check_model_route_logic.py  git_auto_commit.ps1  test_inject_report_lifecycle.ps1  test_inject_report_lifecycle_integration.ps1
tools__project_helpers/vmp_plan/: NoteBotAuth.protect.tsv  NoteBotInjector.protect.tsv  NoteBotModel.protect.tsv  NoteBotUpdater.protect.tsv  README.md  apply-vmp-plan.ps1  build-vmp-project.ps1  filter-vmp-map.ps1  generate-auth-reference-selector.py  generate-vmp-selector.py  prepare-vmp-gui.ps1  protect-auth-dll.ps1  restore-empty-vmp-project.ps1  verify-auth-vmp-protection.py  verify-vmp-readiness.py
